--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,1 @@
-<div>
-    <img src="/assets/images/headerBlue2.png" style="width: 100%;" alt="image">
-</div>
+<img src="/assets/images/fotoBuildingLionSystem.png" style="width: 100%;" alt="fotoBuildingLionSystem">
